--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ arc-swap = { version = ">=1.0.0", optional = true }
 
 [target.'cfg(windows)'.dependencies.winapi]
 version = ">=0.3"
-features = ["errhandlingapi"]
+features = ["errhandlingapi", "sysinfoapi"]
 
 [dev-dependencies]
 criterion = "0.3.0"
